// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Listen A11y I can see the skip to content link 1`] = `"Vá para o conteúdo"`;

exports[`Canonical Listen Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Listen Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Listen Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "33",
  },
  {
    "p": "portuguese.listen.cqx36ey0kld4o.page",
  },
  {
    "x1": "[urn:bbc:optimo:asset:cqx36ey0kld4o]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-portuguese]",
  },
  {
    "x4": "[pt-br]",
  },
  {
    "x7": "[article-sfv]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Test]",
  },
  {
    "x11": "[2026-10-07T16:10:22.092Z]",
  },
  {
    "x12": "[2026-10-07T16:10:22.092Z]",
  },
]
`;

exports[`Canonical Listen Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Brasil",
  "url": "/portuguese",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 2`] = `
{
  "text": "Por que você pode confiar na BBC",
  "url": "https://www.bbc.com/portuguese/institutional-50054434",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 3`] = `
{
  "text": "Termos de Uso",
  "url": "https://www.bbc.com/portuguese/institutional-36202448",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 4`] = `
{
  "text": "Sobre a BBC",
  "url": "https://www.bbc.com/portuguese/institutional-36202452",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 5`] = `
{
  "text": "Política de privacidade",
  "url": "https://www.bbc.com/portuguese/institutional-36202454",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 7`] = `
{
  "text": "Contate a BBC",
  "url": "https://www.bbc.co.uk/portuguese/send/u50853599",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 8`] = `
{
  "text": "BBC News em outras línguas",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 9`] = `
{
  "text": "Leia sobre nossa política em relação a links externos.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Listen Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/portuguese"`;

exports[`Canonical Listen Footer Paragraphs should match text 1`] = `"© 2026 BBC. A BBC não se responsabiliza pelo conteúdo de sites externos. Leia sobre nossa política em relação a links externos."`;

exports[`Canonical Listen Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Brasil",
  "svg": <path
    d="M759.928 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.192a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.267 36.647v-72.699h22.003V265.75h-23.192zM804.187 159.452h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.44-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.812 35.978h-24.233a2032.839 2032.839 0 01-14.57-52.628c-4.659-17.74-9.068-35.63-13.23-53.67h24.975a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.771 40.586 3259.894 3259.894 0 0018.881-77.456h22.3a3251.95 3251.95 0 0018.733 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.531a1845.28 1845.28 0 01-13.231 53.67 2041.61 2041.61 0 01-14.57 52.628h-24.233zM1077.471 267.98c-5.85 0-11.622-.645-17.32-1.932a66.227 66.227 0 01-16.428-6.096v-20.516c10.604 6.444 21.854 9.663 33.748 9.663 6.74 0 11.868-1.138 15.387-3.419 3.517-2.28 5.278-5.45 5.278-9.515 0-3.07-.869-5.475-2.602-7.21-1.735-1.733-4.04-3.122-6.913-4.163-2.876-1.04-6.095-2.007-9.663-2.899-5.85-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.228-3.889-11.299-6.319-3.073-2.427-5.403-5.352-6.987-8.771-1.587-3.42-2.379-7.508-2.379-12.265 0-6.74 1.71-12.537 5.13-17.395 3.419-4.855 8.25-8.597 14.495-11.225 6.244-2.624 13.677-3.939 22.3-3.939 5.65 0 11.2.646 16.65 1.933 5.45 1.289 10.357 3.024 14.72 5.203v20.22c-4.363-2.677-9.293-4.758-14.793-6.245-5.501-1.487-11.028-2.23-16.577-2.23-6.047 0-10.73 1.04-14.05 3.122-3.32 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.379 6.616 1.584 1.635 3.84 2.973 6.764 4.014 2.923 1.04 6.368 2.058 10.333 3.047 5.055 1.29 9.76 2.702 14.123 4.238 4.36 1.537 8.2 3.493 11.522 5.872 3.32 2.379 5.896 5.403 7.731 9.069 1.833 3.668 2.75 8.177 2.75 13.529 0 7.038-1.735 13.06-5.203 18.063-3.47 5.006-8.474 8.823-15.016 11.447-6.54 2.626-14.42 3.94-23.638 3.94z"
  />,
}
`;

exports[`Canonical Listen Header Navigation link should match text and url 1`] = `
{
  "text": "Notícias",
  "url": "/portuguese",
}
`;

exports[`Canonical Listen Image Caption should match text 1`] = `"Legenda do áudio, syndication test run"`;

exports[`Canonical Listen Image should match snapshot 1`] = `
<noscript>
  <div>
    <div
      class="css-1g988if"
    >
      <strong
        class="css-pow7hy"
      >
        A reprodução deste formato de vídeo não é compatível com seu dispositivo
      </strong>
    </div>
  </div>
</noscript>
`;

exports[`Canonical Listen Main heading should match text 1`] = `"syndication test run"`;

exports[`Canonical Listen Media Loader renders a valid container 1`] = `
<figure
  class="media-container css-1okmog4"
  data-e2e="media-loader__container"
>
  <div
    class="css-8432in"
    data-simorgh-media-loader="inactive"
  >
    <div
      class="media-player css-9p9hvp"
      data-e2e="media-player"
    >
      <noscript>
        <div>
          <div
            class="css-1g988if"
          >
            <strong
              class="css-pow7hy"
            >
              A reprodução deste formato de vídeo não é compatível com seu dispositivo
            </strong>
          </div>
        </div>
      </noscript>
    </div>
  </div>
  <figcaption
    class="css-mj1lem"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="css-5ku87v"
      >
        Legenda do áudio, 
      </span>
      <span
        data-testid="caption-paragraph"
      >
        syndication test run
      </span>
    </span>
  </figcaption>
</figure>
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/portuguese/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Listen SEO Canonical link 1`] = `"http://localhost:7081/portuguese/listen/cqx36ey0kld4o"`;

exports[`Canonical Listen SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Listen SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Listen SEO Heading level 1 1`] = `"syndication test run"`;

exports[`Canonical Listen SEO Lang attribute 1`] = `"pt-br"`;

exports[`Canonical Listen SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News Brasil",
        "noBylinesPolicy": "https://www.bbc.com/portuguese/institutional-50054434#authorexpertise",
      },
      "dateModified": "2026-10-07T16:10:22.092Z",
      "datePublished": "2026-10-07T16:10:22.092Z",
      "headline": "Test",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_portuguese/38a7/test/801325c0-c17c-11f1-9cfa-8df2c2f12d1d.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "pt-BR",
        "name": "Portuguese",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/portuguese/listen/cqx36ey0kld4o",
        "@type": "WebPage",
        "name": "Test",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/portuguese/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News Brasil",
        "publishingPrinciples": "https://www.bbc.com/portuguese/institutional-50054434",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_portuguese/38a7/test/801325c0-c17c-11f1-9cfa-8df2c2f12d1d.png",
      "url": "http://localhost:7081/portuguese/listen/cqx36ey0kld4o",
    },
  ],
}
`;

exports[`Canonical Listen SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "AudioObject",
  "description": "ssss",
  "duration": "PT2M19S",
  "embedURL": "https://www.test.bbc.com/ws/av-embeds/articles/cqx36ey0kld4o/p01wnb1g/pt-BR",
  "name": "syndication test run",
  "uploadDate": "2025-07-02T11:43:54.000Z",
}
`;

exports[`Canonical Listen SEO OG description 1`] = `"Test"`;

exports[`Canonical Listen SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_portuguese/38a7/test/801325c0-c17c-11f1-9cfa-8df2c2f12d1d.png"`;

exports[`Canonical Listen SEO OG image alt 1`] = `"test"`;

exports[`Canonical Listen SEO OG locale 1`] = `"pt-BR"`;

exports[`Canonical Listen SEO OG site name 1`] = `"BBC News Brasil"`;

exports[`Canonical Listen SEO OG title 1`] = `"Test - BBC News Brasil"`;

exports[`Canonical Listen SEO OG type 1`] = `"article"`;

exports[`Canonical Listen SEO OG url 1`] = `"http://localhost:7081/portuguese/listen/cqx36ey0kld4o"`;

exports[`Canonical Listen SEO Page title 1`] = `"Test - BBC News Brasil"`;

exports[`Canonical Listen SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Listen SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Listen SEO Twitter creator 1`] = `"@bbcbrasil"`;

exports[`Canonical Listen SEO Twitter description 1`] = `"Test"`;

exports[`Canonical Listen SEO Twitter image alt 1`] = `"test"`;

exports[`Canonical Listen SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_portuguese/38a7/test/801325c0-c17c-11f1-9cfa-8df2c2f12d1d.png"`;

exports[`Canonical Listen SEO Twitter site 1`] = `"@bbcbrasil"`;

exports[`Canonical Listen SEO Twitter title 1`] = `"Test - BBC News Brasil"`;

exports[`Canonical Listen Timestamp should match text and date 1`] = `
{
  "date": "2026-10-07",
  "text": "7 outubro 2026",
}
`;
